# smart-golf-cart

./: .gitignore  README.md  record_all.sh  start_all.sh  start_sensors.sh  stop_all.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
docs/: ARCHITECTURE.md  DEV_GUIDE.md  INTERFACE_CONTRACT.md  TESTING_SOP.md
scripts/: deploy_follow.sh  generate_nav_analysis.py  generate_test_map.py  generate_waypoint_map.py  record_follow.sh  record_nav.sh  start_all.sh  stop_all.sh  test_waypoint.sh  verify_bag.sh  visualize_nav_run.py  waypoint_map.html
src/golf_bringup/: CMakeLists.txt  package.xml
src/golf_bringup/config/: collision_monitor.yaml  ekf_gps.yaml  nav2_params.yaml  slam_toolbox.yaml
src/golf_bringup/launch/: depth_scan.launch.py  follow.launch.py  minimal_nav2.launch.py  navigation.launch.py  perception.launch.py  s11_tf.launch.py  sensors.launch.py  slam.launch.py
src/golf_communication/: README.md  package.xml  setup.cfg  setup.py
src/golf_communication/golf_communication/: mqtt_bridge_node.py
src/golf_mapping/: README.md  package.xml  setup.cfg  setup.py
src/golf_mapping/golf_mapping/: gps_path_recorder.py  imu_ned_to_enu.py  test_logger.py
src/golf_navigation/: README.md  package.xml  setup.cfg  setup.py
src/golf_navigation/golf_navigation/: follow_target_publisher.py  gps_waypoint_follower.py  lidar_emergency_stop.py  lock_manager_node.py  mode_manager_node.py  summon_service.py
src/golf_perception/: README.md  package.xml  setup.cfg  setup.py
webapp/: build.sh  index.html  serve.py  simulate.sh
(+5 files in other folders)
